# ImplicitelySharedData

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  Image.cpp  Image.h  image_example.cpp
include/: COW.h  Singleton.h
test/: CMakeLists.txt  SharedInt.cpp  SharedInt.h  test_basic.cpp  will_fail.cpp
